# bytewax-redis

./: .gitignore  MODULE_STORE_README.md  README.md  justfile  pyproject.toml  vermin-lib.ini
.github/workflows/: CI.yml
docs/: conf.py
examples/: redis_connector.py
pytests/: test_bytewax_redis.py
requirements/: build-py3.10.txt  build-py3.11.txt  build-py3.12.txt  build-py3.9.txt  dev.in  dev.txt  doc.txt  lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.8.txt  lib-py3.9.txt
src/bytewax/bytewax_redis/: __init__.py  sinks.py  sources.py
src/examples/: redis_source.py
